[gd_scene load_steps=41 format=3 uid="uid://3he28p40g22w"]

[ext_resource type="Script" path="res://scripts/witch.gd" id="1_1q4ht"]
[ext_resource type="Texture2D" uid="uid://bexnaaj7jnpep" path="res://assets/player2/spr_shadow.png" id="1_06867"]
[ext_resource type="Texture2D" uid="uid://b17r4q3yw0780" path="res://assets/Witch Doctor/combined.png" id="2_fydnl"]
[ext_resource type="PackedScene" uid="uid://c2ruf735lsivq" path="res://scenes/healthbar.tscn" id="3_03c7q"]
[ext_resource type="Texture2D" uid="uid://julbulhtyo4p" path="res://assets/lightning/Lightning_1_512-sheet.png" id="4_c8go5"]
[ext_resource type="Texture2D" uid="uid://uwurj71ohdbs" path="res://assets/Smoke/1.png" id="6_u7k0a"]
[ext_resource type="Texture2D" uid="uid://d20srolsyda3x" path="res://assets/Smoke/2.png" id="7_yun5a"]
[ext_resource type="Texture2D" uid="uid://c167x8dnws4gl" path="res://assets/Smoke/3.png" id="8_bbkfs"]
[ext_resource type="Texture2D" uid="uid://dq46h3x0ibpwo" path="res://assets/Smoke/4.png" id="9_2sj5c"]
[ext_resource type="Texture2D" uid="uid://cl0rocc33qldp" path="res://assets/Smoke/5.png" id="10_e8bj4"]
[ext_resource type="Texture2D" uid="uid://xlbw3dpubccq" path="res://assets/Smoke/6.png" id="11_84g3o"]
[ext_resource type="Texture2D" uid="uid://ckmaqbare6n5v" path="res://assets/Smoke/7.png" id="12_t6eev"]
[ext_resource type="Texture2D" uid="uid://dvwjx8q5pc6wj" path="res://assets/Smoke/8.png" id="13_eodwg"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_640y7"]
radius = 8.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_8qr72"]
radius = 6.0
height = 16.0

[sub_resource type="Animation" id="Animation_1s4h6"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("smoke:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"default"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("smoke:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("smoke:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("smoke:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Sprite2D:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("CollisionShape2D:disabled")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_o1are"]
resource_name = "death"
length = 1.50002
step = 0.166667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("smoke:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"default"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("smoke:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.166667, 0.333333, 0.5, 0.666667, 0.833333, 1, 1.16667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("smoke:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("smoke:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Sprite2D:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.333333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("CollisionShape2D:disabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_25a3w"]
resource_name = "hit"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0333333, 0.0666667),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(100, 100, 100, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_40veq"]
resource_name = "idle_back"
length = 0.80002
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [18, 19, 20, 21]
}

[sub_resource type="Animation" id="Animation_mb6rv"]
resource_name = "idle_front"
length = 0.80002
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_yjvfj"]
resource_name = "idle_side"
length = 0.80002
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [6, 7, 8, 9]
}

[sub_resource type="Animation" id="Animation_qju5i"]
resource_name = "skill_back"
step = 0.166667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.166667, 0.333333, 0.5, 0.666667, 0.833333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [66, 67, 68, 69, 70, 71]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"attack"
}]
}

[sub_resource type="Animation" id="Animation_w683h"]
resource_name = "skill_front"
length = 1.00002
step = 0.166667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.166667, 0.333333, 0.5, 0.666667, 0.833333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [48, 49, 50, 51, 52, 53]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"attack"
}]
}

[sub_resource type="Animation" id="Animation_w28c1"]
resource_name = "skill_side"
step = 0.166667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.166667, 0.333333, 0.5, 0.666667, 0.833333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [54, 55, 56, 57, 58, 59]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"attack"
}]
}

[sub_resource type="Animation" id="Animation_11jmm"]
resource_name = "walk_back"
length = 0.60001
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [42, 43, 44, 45, 46, 47]
}

[sub_resource type="Animation" id="Animation_21sfr"]
resource_name = "walk_front"
length = 0.60001
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [24, 25, 26, 27, 28, 29]
}

[sub_resource type="Animation" id="Animation_ok56n"]
resource_name = "walk_side"
length = 0.60001
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [30, 31, 32, 33, 34, 35]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_baclg"]
_data = {
"RESET": SubResource("Animation_1s4h6"),
"death": SubResource("Animation_o1are"),
"hit": SubResource("Animation_25a3w"),
"idle_back": SubResource("Animation_40veq"),
"idle_front": SubResource("Animation_mb6rv"),
"idle_side": SubResource("Animation_yjvfj"),
"skill_back": SubResource("Animation_qju5i"),
"skill_front": SubResource("Animation_w683h"),
"skill_side": SubResource("Animation_w28c1"),
"walk_back": SubResource("Animation_11jmm"),
"walk_front": SubResource("Animation_21sfr"),
"walk_side": SubResource("Animation_ok56n")
}

[sub_resource type="Animation" id="Animation_ejnoc"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_1vrml"]
resource_name = "default"
step = 0.111111
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.111111, 0.222222, 0.333333, 0.444444, 0.555556, 0.666667, 0.777778, 0.888889),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_02iuy"]
_data = {
"RESET": SubResource("Animation_ejnoc"),
"default": SubResource("Animation_1vrml")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_l5ofk"]
atlas = ExtResource("6_u7k0a")
region = Rect2(0, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_0m7qp"]
atlas = ExtResource("7_yun5a")
region = Rect2(0, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_qmp6w"]
atlas = ExtResource("8_bbkfs")
region = Rect2(0, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_jqm7h"]
atlas = ExtResource("9_2sj5c")
region = Rect2(0, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_cvgot"]
atlas = ExtResource("10_e8bj4")
region = Rect2(0, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_3676e"]
atlas = ExtResource("11_84g3o")
region = Rect2(0, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_two54"]
atlas = ExtResource("12_t6eev")
region = Rect2(0, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_lnlsl"]
atlas = ExtResource("13_eodwg")
region = Rect2(0, 0, 512, 512)

[sub_resource type="SpriteFrames" id="SpriteFrames_dxsbb"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_l5ofk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0m7qp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qmp6w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jqm7h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cvgot")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3676e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_two54")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lnlsl")
}],
"loop": false,
"name": &"default",
"speed": 8.0
}]

[node name="witch" type="CharacterBody2D"]
collision_layer = 16
collision_mask = 147
motion_mode = 1
wall_min_slide_angle = 0.0
script = ExtResource("1_1q4ht")
max_health = 125.0

[node name="SprShadow" type="Sprite2D" parent="."]
position = Vector2(0, 15)
scale = Vector2(1.26667, 1.2)
texture = ExtResource("1_06867")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_fydnl")
flip_h = true
hframes = 6
vframes = 12

[node name="hurtbox" type="Area2D" parent="Sprite2D"]
visible = false
position = Vector2(0, 16)
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite2D/hurtbox"]
position = Vector2(0, -14)
shape = SubResource("CapsuleShape2D_640y7")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 7)
shape = SubResource("CapsuleShape2D_8qr72")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_baclg")
}
autoplay = "idle_side"

[node name="healthbar" parent="." instance=ExtResource("3_03c7q")]
z_index = 2
offset_left = -16.0
offset_top = -18.0
offset_right = 48.0
offset_bottom = -13.0
scale = Vector2(0.5, 0.5)

[node name="debug" type="Label" parent="."]
visible = false
offset_left = -12.0
offset_top = -34.0
offset_right = 28.0
offset_bottom = -11.0
theme_override_font_sizes/font_size = 8
text = "debug"

[node name="misc" type="Node2D" parent="."]
position = Vector2(0, 19)

[node name="damage_label" type="Marker2D" parent="misc"]
visible = false
position = Vector2(-4, -47)

[node name="shock_timer" type="Timer" parent="misc"]
wait_time = 0.1

[node name="lightning" type="Sprite2D" parent="misc"]
visible = false
modulate = Color(0.980392, 0.901961, 0.388235, 1)
position = Vector2(0, -29)
scale = Vector2(0.15, 0.15)
texture = ExtResource("4_c8go5")
hframes = 3
vframes = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="misc/lightning"]
libraries = {
"": SubResource("AnimationLibrary_02iuy")
}
speed_scale = 2.0

[node name="attack_cooldown" type="Timer" parent="misc"]
wait_time = 2.0
one_shot = true

[node name="poison_cooldown" type="Timer" parent="misc"]
wait_time = 5.0
one_shot = true

[node name="slowdown_cooldown" type="Timer" parent="misc"]
wait_time = 6.0
one_shot = true

[node name="heal_cooldown" type="Timer" parent="misc"]
wait_time = 6.0
one_shot = true

[node name="count" type="Timer" parent="misc/heal_cooldown"]
wait_time = 0.1

[node name="duration" type="Timer" parent="misc/heal_cooldown"]
wait_time = 0.6
one_shot = true

[node name="summon_cooldown" type="Timer" parent="misc"]
wait_time = 5.0
one_shot = true

[node name="insta_damage_cooldown" type="Timer" parent="misc"]
wait_time = 5.0
one_shot = true

[node name="smoke" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(0, -7)
scale = Vector2(0.15, 0.15)
sprite_frames = SubResource("SpriteFrames_dxsbb")

[connection signal="area_entered" from="Sprite2D/hurtbox" to="." method="_on_hurtbox_area_entered"]
[connection signal="timeout" from="misc/shock_timer" to="." method="_on_shock_timer_timeout"]
[connection signal="timeout" from="misc/attack_cooldown" to="." method="_on_attack_cooldown_timeout"]
[connection signal="timeout" from="misc/poison_cooldown" to="." method="_on_poison_cooldown_timeout"]
[connection signal="timeout" from="misc/slowdown_cooldown" to="." method="_on_slowdown_cooldown_timeout"]
[connection signal="timeout" from="misc/heal_cooldown" to="." method="_on_heal_cooldown_timeout"]
[connection signal="timeout" from="misc/heal_cooldown/count" to="." method="_on_count_timeout"]
[connection signal="timeout" from="misc/heal_cooldown/duration" to="." method="_on_duration_timeout"]
[connection signal="timeout" from="misc/summon_cooldown" to="." method="_on_summon_cooldown_timeout"]
[connection signal="timeout" from="misc/insta_damage_cooldown" to="." method="_on_insta_damage_cooldown_timeout"]
